--- a/index.html
+++ b/index.html
@@ -2,14 +2,48 @@
 <html>
 <head>
 	<meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Learn Boostrap : bluid website</title>
+
+     <link rel="shortcut icon"  href="img/mark.png">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+     <nav class="navbar navbar-expand-sm bg-dark navbar-dark py-3">
+          <div class="container">
+               <a href="#" class="navbar-brand">Bluid website</a>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse" id="navmenu">
+                    <ul class="navbar-nav ms-auto">
+                         <li class="nav-item">
+                              <a href="#" class="nav-link">Learn</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="#" class="nav-link">Question</a>
+                         </li>
+                         <li class="nav-item">
+                              <a href="#" class="nav-link">Instructor</a>
+                         </li>
+                    </ul>
+               </div>
+          </div>
+     </nav>
+     
+     <section class="bg-dark text-light p-5 text-center">
+          <div class="container">
+               <div class="d-sm-flex align-items-center justify-content-between">
+                    <div>
+                         <h1>Let's <span class="text-warning">bluid!</span></h1>
+                         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, et dolore magna aliqua. Ut eniveniam. Excepteur sunt in  est laborum.</p>
+                         <button class="btn btn-primary btn-lg">Start the enrollment</button>
+                    </div>
+                    <img class="img-fluid w-50 d-none d-sm-block" src="img/header.jpg">
+               </div>
+          </div>
+     </section>
+
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
